mon-pix/app/styles/components/dashboard/_content.scss
@mixin add-dashboard-content-separator() {
  border-bottom: 1px solid $grey-20;
  padding: 24px 0;
}

.dashboard-content {
  display: grid;
  grid: "autoplace";
  grid-template-columns: 1fr;
  padding: 40px 20px;

  &__banner {
    grid-area: 1 / 1 / 2 / 2;
  }

  &__score {
    @include add-dashboard-content-separator();

    grid-area: 2 / 1 / 3 / 2;
    margin-bottom: 20px;

    &:first-of-type {
      padding-top: 0;

      .dashboard-content-score__wrapper {
        margin-top: 0;
      }
    }
  }

  &__main {
    grid-area: 3 / 1 / 7 / 2;
  }

  &__certif {
    grid-area: 7 / 1 / 8 / 2;
  }

  @include device-is('tablet') {
    grid-template-columns: repeat(6, 1fr);

    &__banner {
      grid-area: 1 / 1 / 2 / 7;
    }

    &__score {
      grid-area: 2 / 1 / 3 / 4;
      height: 100%;
    }

    &__certif {
      @include add-dashboard-content-separator();

      grid-area: 2 / 4 / 3 / 7;
      margin-bottom: 24px;
      height: 100%;
    }

    &__main {
      grid-area: 3 / 1 / 13 / 7;
    }
  }

  @include device-is('large-screen') {
    grid-template-columns: repeat(4, 1fr);
    padding: 0 20px;

    &__banner {
      display: none;
    }

    &__main {
      grid-area: 1 / 1 / 6 / 4;
    }

    &__score {
      grid-area: 1 / 4 / 2 / 5;
      border-bottom: none;
      margin: 0;
      padding-top: 40px;

      &:first-of-type {
        padding-top: 40px;
      }
    }

    &__certif {
      grid-area: 2 / 4 / 3 / 5;
      border-bottom: none;
      margin: 0;
    }
  }
}

.dashboard-content-main {

  &__banner {
    display: none;
  }

  &__section {
    @include add-dashboard-content-separator();

    padding: 24px 0;

    &:last-child {
      border-bottom: none;
    }
  }

  @include device-is('large-screen') {

    &__banner {
      @include add-dashboard-content-separator();

      display: block;
      padding: 40px 0 47px 0;

      & > .new-information {
        padding: 20px 5px 20px 0;
      }
    }
  }
}

.dashboard-content-score {

  &__wrapper {
    display: flex;
    background-color: $white;
    border-radius: 10px;
    padding: 19px 0;
    box-shadow: 0 1px 0 0 rgba(23, 43, 77, 0.12);
    flex-direction: column;
    align-items: center;

    @include device-is('large-screen') {
      margin-left: 34px;
      font-size: 0.8125rem;
    }
  }
}

.dashboard-content-score-wrapper {

  &__button {
    padding-top: 10px;
  }
}

.dashboard-content-main-section {

  &__title {
    color: $grey-80;
    font-size: 1.125rem;
    font-family: $font-open-sans;
    font-weight: $font-semi-bold;
    letter-spacing: 0.009rem;
    line-height: 1.562rem;
  }

  &__subtitle {
    color: $grey-50;
    font-size: 0.8125rem;
    font-family: $font-roboto;
    letter-spacing: 0.009rem;
    margin: 4px 0 24px;
  }

  &--with-button {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
  }

  &__button {
    display: none;
    color: $grey-90;
    border: 1px solid $grey-50;
    padding: 10px 16px;
    border-radius: 4px;
    font-size: 0.875rem;

    &:hover {
      background-color: darken($grey-10, 5%);
    }

    @include device-is('tablet') {
      display: block;
    }
  }
}

